apps/cdk-cats/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdk-cats
  namespace: default
spec:
  type: LoadBalancer
  selector:
     app: cdk-cats
  ports:
  - name: cdk-cats
    protocol: TCP
    port: 80
